; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_so_stop_extended_bk_idle.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_so_stop_extended_bk_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.socket = type { i32, i64, i32 }

@SOF1_EXTEND_BK_IDLE_INPROG = common dso_local global i32 0, align 4
@soextbkidlestat = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SHUTDOWN_SOCKET_LEVEL_DISCONNECT_INTERNAL = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@SOF_DEFUNCT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket*)* @so_stop_extended_bk_idle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @so_stop_extended_bk_idle(%struct.socket* %0) #0 {
  %2 = alloca %struct.socket*, align 8
  store %struct.socket* %0, %struct.socket** %2, align 8
  %3 = load i32, i32* @SOF1_EXTEND_BK_IDLE_INPROG, align 4
  %4 = xor i32 %3, -1
  %5 = load %struct.socket*, %struct.socket** %2, align 8
  %6 = getelementptr inbounds %struct.socket, %struct.socket* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 8
  %8 = and i32 %7, %4
  store i32 %8, i32* %6, align 8
  %9 = load %struct.socket*, %struct.socket** %2, align 8
  %10 = getelementptr inbounds %struct.socket, %struct.socket* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = call i32 @OSDecrementAtomic(i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @soextbkidlestat, i32 0, i32 0))
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @soextbkidlestat, i32 0, i32 0), align 8
  %13 = icmp sge i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @VERIFY(i32 %14)
  %16 = call i32 (...) @current_proc()
  %17 = load %struct.socket*, %struct.socket** %2, align 8
  %18 = load i32, i32* @SHUTDOWN_SOCKET_LEVEL_DISCONNECT_INTERNAL, align 4
  %19 = load i32, i32* @FALSE, align 4
  %20 = call i32 @sosetdefunct(i32 %16, %struct.socket* %17, i32 %18, i32 %19)
  %21 = load %struct.socket*, %struct.socket** %2, align 8
  %22 = getelementptr inbounds %struct.socket, %struct.socket* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* @SOF_DEFUNCT, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %1
  %28 = call i32 (...) @current_proc()
  %29 = load %struct.socket*, %struct.socket** %2, align 8
  %30 = load i32, i32* @SHUTDOWN_SOCKET_LEVEL_DISCONNECT_INTERNAL, align 4
  %31 = call i32 @sodefunct(i32 %28, %struct.socket* %29, i32 %30)
  br label %32

32:                                               ; preds = %27, %1
  ret void
}

declare dso_local i32 @OSDecrementAtomic(i64*) #1

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @sosetdefunct(i32, %struct.socket*, i32, i32) #1

declare dso_local i32 @current_proc(...) #1

declare dso_local i32 @sodefunct(i32, %struct.socket*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
